# tif2dds

./: .gitignore  Cargo.toml  README  README.md  uninstall.bat
.github/workflows/: build.yml  release.yml
src/: cli.rs  config.rs  conversion.rs  main.rs  winreg.rs
