[package]
name = "tif2dds"
version = "1.7.0"
edition = "2021"
authors = ["unrenamed <renkonazbka@gmail.com>"]
description = """
A Rust CLI tool to convert .TIF and .PNG to .DDS with format prompts.
"""
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/unrenamed/tif2dds"
repository = "https://github.com/unrenamed/tif2dds"
keywords = ["cli", "image-conversion", "dds", "tif", "png"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
clap = { version = "4.5.3", features = ["cargo"] }
dialoguer = "0.11.0"
image = "0.25.5"
rust-ini = "0.21.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
